--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,14 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public"
+    "start": "sirv public",
+    "test": "jest"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
+    "@testing-library/dom": "^7.29.0",
+    "@testing-library/user-event": "^12.5.0",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.0.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -18,8 +21,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.4",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.10",
+    "@testing-library/svelte": "^3.0.0",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
     "sirv-cli": "^1.0.0",
     "subscriptions-transport-ws": "^0.9.18",
-    "svelte-apollo": "^0.4.0"
+    "svelte-apollo": "^0.4.0",
+    "svelte-jester": "^1.3.0"
   }
 }
