--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
         "@types/graphql": "^14.5.0",
         "@types/graphql-depth-limit": "^1.1.2",
         "@types/node": "^14.14.11",
+        "@types/pg": "^7.14.7",
         "@types/uuid": "^8.3.0",
         "apollo-server-express": "^2.19.0",
         "compression": "^1.7.4",
@@ -26,6 +27,7 @@
         "http": "^0.0.1-security",
         "ncp": "^2.0.0",
         "nodemon": "^2.0.6",
+        "pg": "^8.5.1",
         "subscriptions-transport-ws": "^0.9.18",
         "ts-node": "^9.1.1",
         "typescript": "^4.1.2",
